output/GrammerParser.java
// $ANTLR 3.5.1 D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g 2025-01-29 21:15:00

import org.antlr.runtime.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.debug.*;
import java.io.IOException;
@SuppressWarnings("all")
public class GrammerParser extends DebugParser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ASSIGN", "BOOLKEY", "COMMENT", 
		"DIV", "ELSE", "ELSEIF", "END_OF_LINE", "EQUAL", "ERROR_FLOAT", "ERROR_ID", 
		"ERROR_INT", "ERROR_OP", "ESC_SEQ", "EXPONENT", "FALSE", "FLOAT", "FLOATKEY", 
		"FOR", "FUN", "GE", "GREATER", "HEX_DIGIT", "ID", "IF", "IN", "INT", "INTKEY", 
		"LE", "LOWER", "LSB", "MAIN", "MUL", "NOT", "NOTEQUAL", "OCTAL_ESC", "ON", 
		"OR", "OTHER_ERRORS", "PCLOSE", "POPEN", "PRINT", "REM", "RETURN", "RSB", 
		"SEMICOLON", "STRING", "SUB", "SUM", "TRUE", "UNICODE_ESC", "VOID", "WHERE", 
		"WHILE", "WS", "','", "':'", "'{'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__59=59;
	public static final int T__60=60;
	public static final int T__61=61;
	public static final int T__62=62;
	public static final int AND=4;
	public static final int ASSIGN=5;
	public static final int BOOLKEY=6;
	public static final int COMMENT=7;
	public static final int DIV=8;
	public static final int ELSE=9;
	public static final int ELSEIF=10;
	public static final int END_OF_LINE=11;
	public static final int EQUAL=12;
	public static final int ERROR_FLOAT=13;
	public static final int ERROR_ID=14;
	public static final int ERROR_INT=15;
	public static final int ERROR_OP=16;
	public static final int ESC_SEQ=17;
	public static final int EXPONENT=18;
	public static final int FALSE=19;
	public static final int FLOAT=20;
	public static final int FLOATKEY=21;
	public static final int FOR=22;
	public static final int FUN=23;
	public static final int GE=24;
	public static final int GREATER=25;
	public static final int HEX_DIGIT=26;
	public static final int ID=27;
	public static final int IF=28;
	public static final int IN=29;
	public static final int INT=30;
	public static final int INTKEY=31;
	public static final int LE=32;
	public static final int LOWER=33;
	public static final int LSB=34;
	public static final int MAIN=35;
	public static final int MUL=36;
	public static final int NOT=37;
	public static final int NOTEQUAL=38;
	public static final int OCTAL_ESC=39;
	public static final int ON=40;
	public static final int OR=41;
	public static final int OTHER_ERRORS=42;
	public static final int PCLOSE=43;
	public static final int POPEN=44;
	public static final int PRINT=45;
	public static final int REM=46;
	public static final int RETURN=47;
	public static final int RSB=48;
	public static final int SEMICOLON=49;
	public static final int STRING=50;
	public static final int SUB=51;
	public static final int SUM=52;
	public static final int TRUE=53;
	public static final int UNICODE_ESC=54;
	public static final int VOID=55;
	public static final int WHERE=56;
	public static final int WHILE=57;
	public static final int WS=58;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public static final String[] ruleNames = new String[] {
		"invalidRule", "synpred19_Grammer", "synpred7_Grammer", "synpred60_Grammer", 
		"exp", "program", "synpred24_Grammer", "synpred14_Grammer", "synpred45_Grammer", 
		"synpred67_Grammer", "synpred50_Grammer", "synpred38_Grammer", "synpred4_Grammer", 
		"synpred41_Grammer", "synpred13_Grammer", "synpred51_Grammer", "funcdec", 
		"synpred1_Grammer", "synpred66_Grammer", "synpred2_Grammer", "synpred34_Grammer", 
		"synpred25_Grammer", "synpred55_Grammer", "case1", "simpleExp", "synpred61_Grammer", 
		"synpred46_Grammer", "synpred5_Grammer", "synpred15_Grammer", "synpred43_Grammer", 
		"block", "stmtlist", "synpred40_Grammer", "synpred36_Grammer", "synpred6_Grammer", 
		"synpred37_Grammer", "explist", "synpred54_Grammer", "synpred59_Grammer", 
		"synpred68_Grammer", "synpred20_Grammer", "synpred23_Grammer", "operator", 
		"synpred47_Grammer", "synpred31_Grammer", "dec", "synpred53_Grammer", 
		"const1", "synpred10_Grammer", "synpred65_Grammer", "idlist", "synpred56_Grammer", 
		"synpred18_Grammer", "synpred27_Grammer", "synpred3_Grammer", "synpred62_Grammer", 
		"synpred33_Grammer", "synpred26_Grammer", "declist", "synpred22_Grammer", 
		"cases", "synpred58_Grammer", "start", "synpred16_Grammer", "synpred30_Grammer", 
		"paramdec", "vardec", "stmt", "iddec", "lvalue", "synpred28_Grammer", 
		"paramdecs", "synpred11_Grammer", "synpred8_Grammer", "synpred35_Grammer", 
		"synpred49_Grammer", "synpred32_Grammer", "synpred52_Grammer", "synpred57_Grammer", 
		"elseiflist", "relop", "synpred12_Grammer", "paramdecslist", "synpred17_Grammer", 
		"synpred21_Grammer", "synpred64_Grammer", "synpred39_Grammer", "synpred9_Grammer", 
		"synpred29_Grammer", "type", "synpred48_Grammer", "synpred42_Grammer", 
		"synpred63_Grammer", "synpred44_Grammer"
	};

	public static final boolean[] decisionCanBacktrack = new boolean[] {
		false, // invalid decision
		false, false, false, false, false, false, true, false, false, false, false, 
		    true, true, false, true, false, true, true, true, true, true, true, 
		    false, true, true, true, true, true, true, true, false, false, false, 
		    true, true, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, false, false, false
	};

 
	public int ruleLevel = 0;
	public int getRuleLevel() { return ruleLevel; }
	public void incRuleLevel() { ruleLevel++; }
	public void decRuleLevel() { ruleLevel--; }
	public GrammerParser(TokenStream input) {
		this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
	}
	public GrammerParser(TokenStream input, int port, RecognizerSharedState state) {
		super(input, state);
		DebugEventSocketProxy proxy =
			new DebugEventSocketProxy(this, port, null);

		setDebugListener(proxy);
		try {
			proxy.handshake();
		}
		catch (IOException ioe) {
			reportError(ioe);
		}
	}

	public GrammerParser(TokenStream input, DebugEventListener dbg) {
		super(input, dbg, new RecognizerSharedState());
	}

	protected boolean evalPredicate(boolean result, String predicate) {
		dbg.semanticPredicate(result, predicate);
		return result;
	}

	@Override public String[] getTokenNames() { return GrammerParser.tokenNames; }
	@Override public String getGrammarFileName() { return "D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g"; }


	public void print(String text){
	System.out.print(text + " ");
	}



	// $ANTLR start "start"
	// D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g:18:1: start : program EOF ;
	public final void start() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "start");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(18, 0);

		try {
			// D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g:18:7: ( program EOF )
			dbg.enterAlt(1);

			// D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g:18:9: program EOF
			{
			dbg.location(18,9);
			pushFollow(FOLLOW_program_in_start37);
			program();
			state._fsp--;
			if (state.failed) return;dbg.location(18,17);
			match(input,EOF,FOLLOW_EOF_in_start39); if (state.failed) return;
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(19, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "start");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "start"



	// $ANTLR start "program"
	// D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g:21:1: program : declist MAIN POPEN PCLOSE block ;
	public final void program() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "program");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(21, 0);

		try {
			// D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g:22:5: ( declist MAIN POPEN PCLOSE block )
			dbg.enterAlt(1);

			// D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g:22:7: declist MAIN POPEN PCLOSE block
			{
			dbg.location(22,7);
			pushFollow(FOLLOW_declist_in_program53);
			declist();
			state._fsp--;
			if (state.failed) return;dbg.location(22,15);
			match(input,MAIN,FOLLOW_MAIN_in_program55); if (state.failed) return;dbg.location(22,20);
			match(input,POPEN,FOLLOW_POPEN_in_program57); if (state.failed) return;dbg.location(22,26);
			match(input,PCLOSE,FOLLOW_PCLOSE_in_program59); if (state.failed) return;dbg.location(22,33);
			pushFollow(FOLLOW_block_in_program61);
			block();
			state._fsp--;
			if (state.failed) return;
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(23, 4);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "program");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "program"



	// $ANTLR start "declist"
	// D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g:25:1: declist : ( dec ( END_OF_LINE )* )* ;
	public final void declist() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "declist");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(25, 0);

		try {
			// D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g:26:5: ( ( dec ( END_OF_LINE )* )* )
			dbg.enterAlt(1);

			// D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g:26:7: ( dec ( END_OF_LINE )* )*
			{
			dbg.location(26,7);
			// D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g:26:7: ( dec ( END_OF_LINE )* )*
			try { dbg.enterSubRule(2);

			loop2:
			while (true) {
				int alt2=2;
				try { dbg.enterDecision(2, decisionCanBacktrack[2]);

				int LA2_0 = input.LA(1);
				if ( (LA2_0==FUN||LA2_0==ID) ) {
					alt2=1;
				}

				} finally {dbg.exitDecision(2);}

				switch (alt2) {
				case 1 :
					dbg.enterAlt(1);

					// D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g:26:8: dec ( END_OF_LINE )*
					{
					dbg.location(26,8);
					pushFollow(FOLLOW_dec_in_declist79);
					dec();
					state._fsp--;
					if (state.failed) return;dbg.location(26,12);
					// D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g:26:12: ( END_OF_LINE )*
					try { dbg.enterSubRule(1);

					loop1:
					while (true) {
						int alt1=2;
						try { dbg.enterDecision(1, decisionCanBacktrack[1]);

						int LA1_0 = input.LA(1);
						if ( (LA1_0==END_OF_LINE) ) {
							alt1=1;
						}

						} finally {dbg.exitDecision(1);}

						switch (alt1) {
						case 1 :
							dbg.enterAlt(1);

							// D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g:26:12: END_OF_LINE
							{
							dbg.location(26,12);
							match(input,END_OF_LINE,FOLLOW_END_OF_LINE_in_declist81); if (state.failed) return;
							}
							break;

						default :
							break loop1;
						}
					}
					} finally {dbg.exitSubRule(1);}

					}
					break;

				default :
					break loop2;
				}
			}
			} finally {dbg.exitSubRule(2);}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(27, 4);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "declist");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "declist"



	// $ANTLR start "dec"
	// D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g:29:1: dec : ( vardec | funcdec );
	public final void dec() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "dec");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(29, 0);

		try {
			// D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g:30:5: ( vardec | funcdec )
			int alt3=2;
			try { dbg.enterDecision(3, decisionCanBacktrack[3]);

			int LA3_0 = input.LA(1);
			if ( (LA3_0==ID) ) {
				alt3=1;
			}
			else if ( (LA3_0==FUN) ) {
				alt3=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return;}
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				dbg.recognitionException(nvae);
				throw nvae;
			}

			} finally {dbg.exitDecision(3);}

			switch (alt3) {
				case 1 :
					dbg.enterAlt(1);

					// D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g:30:7: vardec
					{
					dbg.location(30,7);
					pushFollow(FOLLOW_vardec_in_dec102);
					vardec();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 2 :
					dbg.enterAlt(2);

					// D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g:31:7: funcdec
					{
					dbg.location(31,7);
					pushFollow(FOLLOW_funcdec_in_dec110);
					funcdec();
					state._fsp--;
					if (state.failed) return;
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(32, 4);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "dec");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "dec"



	// $ANTLR start "type"
	// D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g:34:1: type : ( INTKEY | FLOATKEY | BOOLKEY );
	public final void type() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "type");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(34, 0);

		try {
			// D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g:35:5: ( INTKEY | FLOATKEY | BOOLKEY )
			dbg.enterAlt(1);

			// D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g:
			{
			dbg.location(35,5);
			if ( input.LA(1)==BOOLKEY||input.LA(1)==FLOATKEY||input.LA(1)==INTKEY ) {
				input.consume();
				state.errorRecovery=false;
				state.failed=false;
			}
			else {
				if (state.backtracking>0) {state.failed=true; return;}
				MismatchedSetException mse = new MismatchedSetException(null,input);
				dbg.recognitionException(mse);
				throw mse;
			}
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(38, 4);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "type");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "type"



	// $ANTLR start "iddec"
	// D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g:40:1: iddec : ID ( ( LSB exp RSB ) | ( ASSIGN exp ) )? ;
	public final void iddec() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "iddec");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(40, 0);

		try {
			// D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g:41:5: ( ID ( ( LSB exp RSB ) | ( ASSIGN exp ) )? )
			dbg.enterAlt(1);

			// D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g:41:7: ID ( ( LSB exp RSB ) | ( ASSIGN exp ) )?
			{
			dbg.location(41,7);
			match(input,ID,FOLLOW_ID_in_iddec160); if (state.failed) return;dbg.location(41,10);
			// D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g:41:10: ( ( LSB exp RSB ) | ( ASSIGN exp ) )?
			int alt4=3;
			try { dbg.enterSubRule(4);
			try { dbg.enterDecision(4, decisionCanBacktrack[4]);

			int LA4_0 = input.LA(1);
			if ( (LA4_0==LSB) ) {
				alt4=1;
			}
			else if ( (LA4_0==ASSIGN) ) {
				alt4=2;
			}
			} finally {dbg.exitDecision(4);}

			switch (alt4) {
				case 1 :
					dbg.enterAlt(1);

					// D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g:41:11: ( LSB exp RSB )
					{
					dbg.location(41,11);
					// D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g:41:11: ( LSB exp RSB )
					dbg.enterAlt(1);

					// D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g:41:12: LSB exp RSB
					{
					dbg.location(41,12);
					match(input,LSB,FOLLOW_LSB_in_iddec164); if (state.failed) return;dbg.location(41,16);
					pushFollow(FOLLOW_exp_in_iddec166);
					exp();
					state._fsp--;
					if (state.failed) return;dbg.location(41,20);
					match(input,RSB,FOLLOW_RSB_in_iddec168); if (state.failed) return;
					}

					}
					break;
				case 2 :
					dbg.enterAlt(2);

					// D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g:41:27: ( ASSIGN exp )
					{
					dbg.location(41,27);
					// D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g:41:27: ( ASSIGN exp )
					dbg.enterAlt(1);

					// D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g:41:28: ASSIGN exp
					{
					dbg.location(41,28);
					match(input,ASSIGN,FOLLOW_ASSIGN_in_iddec174); if (state.failed) return;dbg.location(41,35);
					pushFollow(FOLLOW_exp_in_iddec176);
					exp();
					state._fsp--;
					if (state.failed) return;
					}

					}
					break;

			}
			} finally {dbg.exitSubRule(4);}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(42, 4);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "iddec");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "iddec"



	// $ANTLR start "idlist"
	// D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g:44:1: idlist : iddec ( ',' iddec )* ;
	public final void idlist() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "idlist");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(44, 0);

		try {
			// D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g:45:5: ( iddec ( ',' iddec )* )
			dbg.enterAlt(1);

			// D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g:45:7: iddec ( ',' iddec )*
			{
			dbg.location(45,7);
			pushFollow(FOLLOW_iddec_in_idlist196);
			iddec();
			state._fsp--;
			if (state.failed) return;dbg.location(45,13);
			// D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g:45:13: ( ',' iddec )*
			try { dbg.enterSubRule(5);

			loop5:
			while (true) {
				int alt5=2;
				try { dbg.enterDecision(5, decisionCanBacktrack[5]);

				int LA5_0 = input.LA(1);
				if ( (LA5_0==59) ) {
					alt5=1;
				}

				} finally {dbg.exitDecision(5);}

				switch (alt5) {
				case 1 :
					dbg.enterAlt(1);

					// D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g:45:14: ',' iddec
					{
					dbg.location(45,14);
					match(input,59,FOLLOW_59_in_idlist199); if (state.failed) return;dbg.location(45,18);
					pushFollow(FOLLOW_iddec_in_idlist201);
					iddec();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					break loop5;
				}
			}
			} finally {dbg.exitSubRule(5);}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(46, 4);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "idlist");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "idlist"



	// $ANTLR start "vardec"
	// D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g:48:1: vardec : idlist ':' type SEMICOLON ;
	public final void vardec() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "vardec");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(48, 0);

		try {
			// D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g:49:5: ( idlist ':' type SEMICOLON )
			dbg.enterAlt(1);

			// D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g:49:7: idlist ':' type SEMICOLON
			{
			dbg.location(49,7);
			pushFollow(FOLLOW_idlist_in_vardec220);
			idlist();
			state._fsp--;
			if (state.failed) return;dbg.location(49,14);
			match(input,60,FOLLOW_60_in_vardec222); if (state.failed) return;dbg.location(49,18);
			pushFollow(FOLLOW_type_in_vardec224);
			type();
			state._fsp--;
			if (state.failed) return;dbg.location(49,23);
			match(input,SEMICOLON,FOLLOW_SEMICOLON_in_vardec226); if (state.failed) return;
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(50, 4);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "vardec");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "vardec"



	// $ANTLR start "funcdec"
	// D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g:52:1: funcdec : FUN ( ( ID POPEN paramdecs PCLOSE ) | ( POPEN paramdecs PCLOSE ':' type ) ) block ( END_OF_LINE )* ;
	public final void funcdec() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "funcdec");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(52, 0);

		try {
			// D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g:53:5: ( FUN ( ( ID POPEN paramdecs PCLOSE ) | ( POPEN paramdecs PCLOSE ':' type ) ) block ( END_OF_LINE )* )
			dbg.enterAlt(1);

			// D:\\Mahta\\compiler\\phase 2\\40117733_40117573_40118813\\Grammer.g:53:7: FUN ( ( ID POPEN paramdecs PCLOSE ) | ( POPEN paramdecs PCLOSE ':' type ) ) block ( END_OF_LINE )*
			{
			dbg.location(53,7);
